fix: adicionar build.sh customizado para contornar frozen lockfile

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "pnpm build",
+  "buildCommand": "bash build.sh",
   "devCommand": "pnpm dev",
   "installCommand": "pnpm install",
   "framework": null,
