--- a/vercel.json
+++ b/vercel.json
@@ -4,28 +4,33 @@
   "devCommand": "pnpm dev",
   "installCommand": "pnpm install --no-frozen-lockfile",
   "framework": null,
-  "outputDirectory": "dist",
-  "public": "dist/public",
   "functions": {
-    "dist/index.js": {
+    "api/index.js": {
       "maxDuration": 60,
       "memory": 1024
     }
   },
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/:path*",
-      "destination": "/dist/index.js"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
     },
     {
-      "source": "/assets/:path*",
-      "destination": "/dist/public/assets/:path*"
+      "src": "/assets/(.*)",
+      "dest": "/dist/public/assets/$1",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
     },
     {
-      "source": "/:path*",
-      "destination": "/dist/public/index.html"
+      "src": "/(.*)",
+      "dest": "/api/index.js"
     }
   ],
+  "public": "dist/public",
+  "env": {
+    "NODE_ENV": "production"
+  },
   "headers": [
     {
       "source": "/(.*)",
