--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,19 @@
   "devCommand": "pnpm dev",
   "installCommand": "pnpm install --no-frozen-lockfile",
   "framework": null,
-  "public": "dist/public"
+  "public": "dist/public",
+  "env": {
+    "DATABASE_URL": "@database_url",
+    "JWT_SECRET": "@jwt_secret",
+    "VITE_APP_ID": "@vite_app_id",
+    "OAUTH_SERVER_URL": "@oauth_server_url",
+    "VITE_OAUTH_PORTAL_URL": "@vite_oauth_portal_url",
+    "OWNER_OPEN_ID": "@owner_open_id",
+    "OWNER_NAME": "@owner_name",
+    "VITE_APP_TITLE": "@vite_app_title",
+    "VITE_APP_LOGO": "@vite_app_logo",
+    "BUILT_IN_FORGE_API_URL": "@built_in_forge_api_url",
+    "BUILT_IN_FORGE_API_KEY": "@built_in_forge_api_key"
+  }
 }
 
