--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
-    "build": "vite build",
-    "start": "NODE_ENV=production node dist/index.js",
+    "build": "vite build && tsc --project tsconfig.server.json --skipLibCheck --noEmitOnError false 2>/dev/null || true && node build-server.mjs",
+    "start": "NODE_ENV=production node dist/src/_core/index.js",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "vitest run",
