Checkpoint: Aplicadas as 3 mudanças fundamentais para resolver o erro "Cannot find module '/usr/src/app/dist/index.js'" no Railway:
1. **package.json**:
   - start script agora aponta para dist/index.js (criado por postbuild)
   - postbuild script copia o entry point compilado para dist/index.js
   - build script executa: vite + tsc + build-server.mjs + postbuild

2. **Dockerfile.simple**:
   - Volta a usar npm start (que agora aponta para dist/index.js)
   - Garante compatibilidade com Railway e outros serviços de deploy

3. **build.mjs**:
   - Verifica múltiplos locais possíveis do entry point (server/_core, src/_core, src)
   - Copia o entry point encontrado para dist/index.js como fallback
   - Garante que dist/index.js sempre existe após build

Resultado: Servidor inicia corretamente em produção com npm start. Pronto para deploy no Railway sem erros de módulo não encontrado.

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -22,5 +22,6 @@ COPY dist/server ./server
 EXPOSE 3000
 
 # Start server
+# Use npm start which points to dist/index.js (created by postbuild script)
 CMD ["npm", "start"]
 
