--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -22,6 +22,6 @@ COPY dist/server ./server
 EXPOSE 3000
 
 # Start server
-# Use npm start which points to dist/index.js (created by postbuild script)
-CMD ["npm", "start"]
+# Executa o stub que redireciona para o arquivo compilado correto
+CMD ["node", "dist/index.js"]
 
