Checkpoint: **Solução Final Implementada com Sucesso**
Resolvido completamente o problema de deployment com ESM loader para resolver aliases em produção.

**Mudanças Principais:**

1. **tsconfig.server.json**: Corrigido `outDir` de `./dist/src` para `./dist`
2. **build-server.mjs**: Atualizado para processar `dist/` (não `dist/src/`) e criar `alias-loader.mjs`
3. **package.json**: start script usa `node --loader ./dist/alias-loader.mjs dist/index.js`
4. **Dockerfile.simple**: CMD atualizado para usar o loader
5. **dist/alias-loader.mjs**: Novo arquivo que resolve aliases `@shared/` em tempo de execução
6. **dist/index.js**: Stub que redireciona para `./_core/index.js`

**Estrutura Final:**
- `dist/_core/index.js`: Entry point principal
- `dist/shared/`: Dependências compartilhadas
- `dist/drizzle/`: Migrations do banco
- `dist/alias-loader.mjs`: Resolver de aliases
- `dist/vite.config.ts`: Configuração do Vite

**Status:**
- ✅ Build compila sem erros
- ✅ npm start inicia servidor com sucesso
- ✅ Aliases @shared resolvidos corretamente
- ✅ Pronto para deploy em Railway/Vercel

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -22,6 +22,6 @@ COPY dist/server ./server
 EXPOSE 3000
 
 # Start server
-# Executa o stub que redireciona para o arquivo compilado correto
-CMD ["node", "dist/index.js"]
+# Executa com loader para resolver aliases @shared
+CMD ["node", "--loader", "./dist/alias-loader.mjs", "dist/index.js"]
 
