--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "ES2020",
     "moduleResolution": "node",
-    "outDir": "./dist/src",
+    "outDir": "./dist",
     "rootDir": "./server",
     "strict": false,
     "esModuleInterop": true,
