Checkpoint: Sistema de notificações em tempo real implementado com:
✅ Backend:
- Schema de notificações e preferências no banco
- NotificationService com métodos para emitir notificações
- WebSocket (Socket.io) para comunicação em tempo real
- Routers tRPC para gerenciar notificações
- Integração com eventos de WhatsApp

✅ Frontend:
- Hook useNotifications para gerenciar notificações
- Componente NotificationBell com dropdown
- Página NotificationPreferences para configurar
- Rota integrada no App.tsx

✅ Documentação:
- NOTIFICATIONS.md com guia completo
- Exemplos de integração
- Tipos de notificações e endpoints

Pronto para integração com eventos reais de Kanban e WhatsApp.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -66,6 +67,7 @@
     "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "jose": "6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
@@ -76,10 +78,13 @@
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "zod": "^4.1.12"
