Checkpoint: Configuração completa para deploy no Vercel:
✅ Configuração:
- vercel.json otimizado com Node.js 22.x
- .vercelignore para otimizar build
- fix-vercel-imports.mjs que resolve aliases @shared/ para caminhos relativos
- package.json com scripts de build e postbuild

✅ Build:
- npm run build compila frontend + backend
- Resolve todos os aliases automaticamente
- Copia shared/, drizzle/, vite.config.ts para dist/
- Cria entry point stub em dist/index.js

✅ Teste Local:
- npm start funciona corretamente
- Servidor inicia em produção
- WebSocket habilitado
- Notificações em tempo real funcionando

✅ Documentação:
- VERCEL_DEPLOYMENT.md com guia completo
- Passo a passo para deploy
- Resolução de problemas

Pronto para fazer push no GitHub e deploy no Vercel!

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,16 +1,45 @@
+# Git
 .git
 .gitignore
+
+# Documentação
 README.md
+CHANGELOG.md
+docs/
+
+# Variáveis de ambiente
 .env.local
 .env.*.local
+
+# Dependências
 node_modules
+.pnpm-store
+
+# Build
 .next
 out
 build
 .turbo
 .vercel
-server/
-drizzle/
-# Keep only dist/public for static hosting
-!dist/public
+
+# Testes
+__tests__
+test/
+*.test.ts
+*.spec.ts
+coverage/
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# Misc
+.cache
+turbo.json
+
+# Keep dist for deployment
+!dist/
 
