feat: KanFlow v2 - Hub de Comunicação com Agente de IA
- Implementar Conversation Manager com Kanban
- Adicionar WhatsApp Integration com setup wizard
- Criar AI Agents Configuration
- Implementar Automations com templates
- Adicionar Admin Panel
- Expandir sidebar com 10 itens de navegação
- Aplicar paleta de cores profissional
- Corrigir demo login funcional
- Remover páginas desnecessárias
- Limpar arquitetura do projeto

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,25 +1,35 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "ES2020",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "outDir": "./dist",
-    "rootDir": "./server",
-    "strict": false,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "declaration": false,
-    "sourceMap": false,
-    "removeComments": true,
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["./shared/*"],
-      "@shared": ["./shared"],
-      "server/*": ["./server/*"]
-    }
+      "@shared/*": [
+        "shared/*"
+      ],
+      "@assets/*": [
+        "attached_assets/*"
+      ],
+      "@/*": [
+        "client/src/*"
+      ]
+    },
+    "rootDir": "./server",
+    "sourceMap": false,
+    "esModuleInterop": true,
+    "strict": false,
+    "skipLibCheck": true,
+    "noEmit": false,
+    "noImplicitAny": false
   },
-  "include": ["server/**/*"],
-  "exclude": ["node_modules", "client", "vite.config.ts", "*.config.ts"]
+  "include": [
+    "server/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
-
