--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
-    "build": "vite build && tsc --project tsconfig.server.json --skipLibCheck --noEmitOnError false 2>/dev/null || true && node build-server.mjs && node fix-vercel-imports.mjs",
-    "start": "NODE_ENV=production node --loader ./dist/alias-loader.mjs dist/index.js",
-    "postbuild": "mkdir -p dist && echo \"// Auto-generated entry stub\\nimport './_core/index.js';\" > dist/index.js && node fix-vercel-imports.mjs",
+    "build": "vite build && tsc -p tsconfig.server.json --skipLibCheck --noEmitOnError false && tsc-alias -p tsconfig.server.json && node build-server.mjs",
+    "start": "NODE_ENV=production node dist/_core/index.js",
+    "postbuild": "mkdir -p dist && echo \"// Auto-generated entry stub\\nimport './server/_core/index.js';\" > dist/index.js && cp vite.config.ts dist/vite.config.js || true",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "vitest run",
@@ -67,7 +67,6 @@
     "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "jose": "6.1.0",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
@@ -97,15 +96,18 @@
     "@types/node": "^24.7.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react": "^5.0.4",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
+    "jsonwebtoken": "^9.0.2",
     "pnpm": "^10.15.1",
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.14",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.19.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.9.3",
