Checkpoint: Adicionados 4 documentos profissionais para desenvolvimento mobile do KanFlow CRM: arquitetura técnica, design system, guia de implementação e roadmap completo. Inclui stack tecnológico (React Native, Redux, WatermelonDB, Replicache), design system com paleta de cores e componentes, exemplos de código para login/dashboard/chats, e plano de implementação em 5 fases (8 semanas para MVP).

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whatsapp-crm-kanban",
-  "version": "1.0.0",
+  "version": "1.0.1+rebuild-fresh",
   "type": "module",
   "license": "MIT",
   "scripts": {
